# gcn-notice-parser

./: .gitignore  .pre-commit-config.yaml  .secrets.sample  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
api/: index.html
api/einstein-probe/: index.html
api/fermi/: index.html
api/svom/: index.html
development/: index.html
docs/: api.md  development.md  usage.md
docs/api/: einstein-probe.md  fermi.md  svom.md
gcn_parser/: __init__.py  exceptions.py  parse.py  parse_json.py  parse_xml.py  topics.py
gcn_parser/ep/: wxt.py
gcn_parser/fermi/: __init__.py  _fermi_lat_pos.py  fermi_gbm_alert.py  fermi_gbm_fin_pos.py  fermi_gbm_flt_pos.py  fermi_gbm_gnd_pos.py  fermi_lat_offline.py
gcn_parser/svom/: __init__.py  _svom.py  svom_eclairs.py  svom_grm.py  svom_mxt.py  svom_retraction.py
gcnparser/: __init__.py  exceptions.py  parse.py  parse_json.py  parse_xml.py  topics.py  utils.py
gcnparser/ep/: __init__.py  wxt.py
gcnparser/fermi/: __init__.py  _fermi_lat_pos.py  fermi_gbm_alert.py  fermi_gbm_fin_pos.py  fermi_gbm_flt_pos.py  fermi_gbm_gnd_pos.py  fermi_lat_offline.py  fermi_lat_pos_diag.py  fermi_lat_pos_ini.py  fermi_lat_pos_upd.py
gcnparser/svom/: __init__.py  _svom.py  _svom_xml.py  svom_eclairs.py  svom_grm.py  svom_mxt.py  svom_retraction.py
search/: search_index.json
tests/: _datetime.py  test_parse.py  test_parser_base.py  test_parsers_ep_wxt.py  test_parsers_fermi_gbm_alert.py  test_parsers_fermi_gbm_fin_pos.py  test_parsers_fermi_gbm_flt_pos.py  test_parsers_fermi_gbm_gnd_pos.py  test_parsers_fermi_lat_offline.py  test_parsers_fermi_lat_pos_diag.py  test_parsers_fermi_lat_pos_ini.py  test_parsers_fermi_lat_pos_upd.py  test_parsers_svom_eclairs.py  test_parsers_svom_grm.py  test_parsers_svom_mxt.py  test_parsers_svom_retraction.py  test_topics.py
tests/fixtures/: collect_fixtures.py
tests/fixtures/ep/alert/: alert_247.json  alert_248.json  alert_249.json  alert_250.json  alert_251..json  alert_252..json  alert_253.json  alert_254.json
tests/fixtures/fermi/fermi_gbm_alert/: fermi_gbm_alert_3785.xml  fermi_gbm_alert_3786.xml  fermi_gbm_alert_3787.xml  fermi_gbm_alert_3788.xml  fermi_gbm_alert_3789.xml  fermi_gbm_alert_3790.xml  (+34 more)
usage/: index.html
(+811 files in other folders)
