[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcn-parser"
version = "0.1.0"
description = "Parsers for the NASA GCN notices."
keywords = ["astrophysics", "astronomy", "ssdc"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.3",
    "pydantic>=2.13.4",
]

[tool.hatch.build.targets.wheel]
packages = ["gcnparser"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "gcn-kafka>=0.3.4",
    "isort>=8.0.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
]
